headscale/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-ui
  labels:
    app: headscale-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale-ui
  template:
    metadata:
      labels:
        app: headscale-ui
    spec:
      containers:
      - name: headscale-ui
        image: ghcr.io/gurucomputing/headscale-ui:latest
        ports:
        - containerPort: 443
