headscale/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-ui
spec:
  selector:
    app: headscale-ui
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
