headscale/ui/ingress-ui.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - headscale.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: headscale.traunseenet.com
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: headscale-ui
                port:
                  number: 443
